實施退水0.41邏輯，調整所有賠率
調整後的賠率：
- 單號投注：10.0 - 0.41 = 9.59倍
- 位置大小單雙：1.96 - 0.41 = 1.55倍
- 龍虎投注：1.96 - 0.41 = 1.55倍
- 冠亞和值大小單雙：1.96 - 0.41 = 1.55倍
- 冠亞和值具體數字：原賠率 - 0.41
  - 3,18: 40.59倍 (41-0.41)
  - 4,17: 20.59倍 (21-0.41)
  - 10,11: 6.59倍 (7-0.41)
  - 以此類推

修改範圍：
- 後端getOdds函數添加退水邏輯
- 前端賠率數據同步更新
- 投注記錄組件賠率計算修正
- 主畫面賠率顯示調整
- 確保前後端完全一致

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -4487,23 +4487,23 @@
                 },
                 getBetOdds(bet) {
                     if (bet.type === 'number') {
-                        return this.odds.number[this.positionToKey(bet.position)] || 9.8;
+                        return this.odds.number[this.positionToKey(bet.position)] || 9.59;
                     } else if (bet.type === 'dragonTiger') {
-                        return this.odds.dragonTiger[bet.value] || 1.96;
+                        return this.odds.dragonTiger[bet.value] || 1.55;
                     } else if (bet.type === 'position') {
                         // 位置投注使用固定賠率
-                        return bet.odds || this.getPropertyOdds(bet.property) || 1.96;
+                        return bet.odds || this.getPropertyOdds(bet.property) || 1.55;
                     } else if (bet.type === 'sumValue') {
                         // 冠亞和值投注
                         if (['big', 'small', 'odd', 'even'].includes(bet.value)) {
-                            return this.odds.sumValue[bet.value] || 1.96;
+                            return this.odds.sumValue[bet.value] || 1.55;
                         } else {
-                            // 具體數值 - 使用正確的賠率表
-                            return this.odds.sumValue[bet.value] || 7.0;
+                            // 具體數值 - 使用包含退水的賠率表
+                            return this.odds.sumValue[bet.value] || 6.59;
                         }
                     } else {
                         // 其他投注類型（冠軍、亞軍等）
-                        return this.odds[bet.type]?.[bet.value] || 1.96;
+                        return this.odds[bet.type]?.[bet.value] || 1.55;
                     }
                 },
                 calculateIndividualPotentialProfit(bet) {
@@ -4813,14 +4813,14 @@
 
                 getPropertyOdds(property) {
                     const baseOdds = {
-                        big: 1.98,
-                        small: 1.98,
-                        odd: 1.98,
-                        even: 1.98,
-                        dragon: 1.98,
-                        tiger: 1.98
+                        big: 1.55,    // 1.96 - 0.41 = 1.55
+                        small: 1.55,
+                        odd: 1.55,
+                        even: 1.55,
+                        dragon: 1.55,
+                        tiger: 1.55
                     };
-                    return baseOdds[property] || 1.98;
+                    return baseOdds[property] || 1.55;
                 },
                 getSumClass(sum) {
                     if (sum > 11) {
