🎯 修復籌碼選單顯示問題與完善退水系統
✨ 新增功能：
- 優化投注選項區域z-index，確保籌碼選單顯示在最上層
- 實現即時退水分配：會員下注後立即分配退水給代理鏈
- 避免重複退水：移除結算時的退水分配，避免雙重分配

🔧 修復問題：
- 修復代理系統退水設定模態框函數名稱衝突問題
- 移除佣金相關功能，系統只保留退水機制
- 修復籌碼下拉選單被投注選項遮擋的問題

💰 退水邏輯改進：
- 會員下注時立即按4.1%分配退水給代理鏈
- 支援全拿、比例、全退三種退水模式
- 確保退水金額計算準確，無重複分配
- 剩餘退水歸平台所有

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -568,12 +568,7 @@
                                                     </select>
                                                     <small class="form-text text-muted">您只能創建比目前層級低一級的代理</small>
                                                 </div>
-                                                <div class="mb-3">
-                                                    <label class="form-label">佣金比例 (%)</label>
-                                                    <input type="number" class="form-control" v-model="newAgent.commission_rate" 
-                                                           step="0.01" min="0" max="100" required>
-                                                    <small class="form-text text-muted">代理可獲得的佣金比例</small>
-                                                </div>
+
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="mb-3">
@@ -623,7 +618,7 @@
                     </div>
 
                     <!-- 退水設定 Modal -->
-                    <div class="modal" id="rebateSettingsModal" tabindex="-1" v-if="showRebateSettingsModal">
+                    <div class="modal" id="rebateSettingsModal" tabindex="-1" v-if="showRebateModal">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
