--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1120,6 +1120,8 @@
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
             border: 1px solid rgba(255, 255, 255, 0.2);
             overflow: hidden;
+            position: relative;
+            z-index: 1;
         }
         
         /* 標籤頁導航 */
