✨ 修復籌碼選單z-index問題並新增代理代為創建會員功能
🎯 修復籌碼選單顯示問題：
- 為投注組別設定z-index: 0，確保籌碼選單(z-index: 99999)顯示在最上層
- 解決籌碼下拉選單被第十名投注選項遮擋的問題

👥 新增代理代為創建會員功能：
- 代理管理頁面新增「代增會員」按鈕
- 支援為下級代理創建會員，最多支援15層代理結構
- 可設定會員初始餘額，自動從創建者餘額扣除
- 完整的前端表單驗證和後端API實現
- 支援數據庫事務確保資金轉移安全性

🔧 功能特色：
- 層級限制：最多15層代理，達到上限時無法創建下級會員
- 資金安全：初始餘額從創建者扣除，確保資金平衡
- 完整記錄：所有點數轉移都有詳細記錄可追蹤
- 用戶體驗：直觀的操作介面和明確的提示訊息

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -1175,6 +1175,8 @@
             border-radius: 12px;
             border: 1px solid rgba(0, 0, 0, 0.05);
             transition: all 0.3s ease;
+            position: relative;
+            z-index: 0;
         }
         
         .betting-group:hover {
