--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1175,6 +1175,8 @@
             border-radius: 12px;
             border: 1px solid rgba(0, 0, 0, 0.05);
             transition: all 0.3s ease;
+            position: relative;
+            z-index: 0;
         }
         
         .betting-group:hover {
