--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -418,6 +418,9 @@
                             <button v-if="agentBreadcrumbs.length > 0" class="btn btn-secondary me-2" @click="goBackToParentLevel">
                                 <i class="fas fa-arrow-left me-1"></i>返回上級
                             </button>
+                            <button class="btn btn-success me-2" @click="showMemberModal">
+                                <i class="fas fa-user-plus me-1"></i>新增會員
+                            </button>
                             <button class="btn btn-primary" @click="showAgentModal">
                                 <i class="fas fa-plus me-1"></i>新增代理
                             </button>
@@ -493,9 +496,6 @@
                                                 <div class="btn-group btn-group-sm">
                                                     <button class="btn btn-outline-primary" @click="adjustAgentBalance(agent)">
                                                         <i class="fas fa-exchange-alt me-1"></i>點數轉移
-                                                    </button>
-                                                    <button class="btn btn-outline-success" @click="showCreateMemberForAgentModal(agent)">
-                                                        <i class="fas fa-user-plus me-1"></i>代增會員
                                                     </button>
                                                     <button class="btn btn-outline-info" @click="showRebateSettingsModal(agent)">
                                                         <i class="fas fa-percent me-1"></i>退水設定
@@ -811,55 +811,7 @@
                         </div>
                     </div>
 
-                    <!-- 代為新增會員 Modal -->
-                    <div class="modal" id="createMemberForAgentModal" tabindex="-1" v-if="showCreateMemberForAgentModal">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">代為新增會員 - {{ targetAgent.username }}</h5>
-                                    <button type="button" class="btn-close" @click="hideCreateMemberForAgentModal"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <form @submit.prevent="createMemberForAgent">
-                                        <div class="alert alert-info">
-                                            <i class="fas fa-info-circle me-2"></i>
-                                            您正在為代理 <strong>{{ targetAgent.username }}</strong> 創建會員。該會員將歸屬於該代理名下。
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label">會員用戶名</label>
-                                            <input type="text" class="form-control" v-model="newMemberForAgent.username" required>
-                                            <small class="form-text text-muted">會員用戶名必須唯一</small>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label">會員密碼</label>
-                                            <input type="password" class="form-control" v-model="newMemberForAgent.password" required>
-                                            <small class="form-text text-muted">請設定一個安全的密碼</small>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label">確認密碼</label>
-                                            <input type="password" class="form-control" v-model="newMemberForAgent.confirmPassword" required>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label">初始餘額 (可選)</label>
-                                            <div class="input-group">
-                                                <input type="number" step="0.01" class="form-control" v-model="newMemberForAgent.initialBalance" 
-                                                       placeholder="0" min="0">
-                                                <span class="input-group-text">元</span>
-                                            </div>
-                                            <small class="form-text text-muted">設定會員的初始餘額，將從您的餘額中扣除</small>
-                                        </div>
-                                        <div class="text-end">
-                                            <button type="button" class="btn btn-secondary me-2" @click="hideCreateMemberForAgentModal">取消</button>
-                                            <button type="submit" class="btn btn-primary" :disabled="loading">
-                                                <span v-if="loading" class="spinner-border spinner-border-sm" role="status"></span>
-                                                創建會員
-                                            </button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
 
                     <!-- 新增會員 Modal -->
                     <div class="modal" id="createMemberModal" tabindex="-1" v-if="showCreateMemberModal">
