修復代理管理系統問題：
1. 修復新增會員按鈕顯示邏輯：只在進入下級代理管理時顯示
2. 修復createMember方法使用正確的代理ID (currentManagingAgent.id)
3. 修復所有資料載入方法使用當前管理代理的ID而非登入代理ID：
   - searchMembers()
   - searchAgents()
   - searchBets()
   - fetchDashboardData()
4. 修復切換代理時的資料更新問題：
   - 在登入成功後載入代理和會員列表
   - 在進入代理管理時重新載入所有相關資料
   - 在返回上級代理時重新載入資料
5. 會員登入API測試通過，可正常創建和登入會員

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -418,7 +418,7 @@
                             <button v-if="agentBreadcrumbs.length > 0" class="btn btn-secondary me-2" @click="goBackToParentLevel">
                                 <i class="fas fa-arrow-left me-1"></i>返回上級
                             </button>
-                            <button class="btn btn-success me-2" @click="showMemberModal">
+                            <button v-if="agentBreadcrumbs.length > 0" class="btn btn-success me-2" @click="showMemberModal">
                                 <i class="fas fa-user-plus me-1"></i>新增會員
                             </button>
                             <button class="btn btn-primary" @click="showAgentModal">
