進一步修復代理系統新增會員模態框問題
- 改用 setTimeout 替代  確保 DOM 完全渲染
- 在 showMemberModal 方法中添加詳細的調試日誌
- 在 HTML 中添加緩存破壞參數 (?v=timestamp) 強制重新載入 JavaScript 文件
- 解決瀏覽器緩存導致的舊版本問題

技術改進：
- 使用 setTimeout(100ms) 給 Vue 更多時間渲染 DOM
- 添加元素檢測日誌協助問題診斷
- 實施緩存破壞策略確保使用最新代碼

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -2054,7 +2054,7 @@
             console.log('頁面完全載入，Vue可用性:', typeof Vue);
             if (typeof Vue !== 'undefined') {
                 const script = document.createElement('script');
-                                 script.src = 'js/main.js';
+                                 script.src = 'js/main.js?v=' + Date.now();
                 script.onload = function() {
                     console.log('main.js 載入完成');
                 };
