修復下注邏輯：退水機制改為結算後分配
- 移除下注時的立即退水分配
- 將退水分配邏輯移至結算階段執行
- 確保退水只在結算後分配給上級代理
- 修復數字異常跳動問題
- 下注時只扣除會員餘額，不影響代理餘額
- 結算時才進行退水計算和分配

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -818,7 +818,9 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title">新增會員</h5>
+                                    <h5 class="modal-title">
+                                        {{ currentManagingAgent.id === user.id ? '新增會員' : '為 ' + currentManagingAgent.username + ' 新增會員' }}
+                                    </h5>
                                     <button type="button" class="btn-close" @click="hideCreateMemberModal"></button>
                                 </div>
                                 <div class="modal-body">
