🔧 修復倒計時跳回、重複期號和新增會員模態框問題
主要修復：
✅ 倒計時跳回問題 - 修復期號同步和重複結算
✅ 新增會員模態框 - 從v-if改為v-show解決DOM問題
✅ 前端倒計時同步 - 移除自動遞減，完全依賴服務器
✅ 重複結算防護 - 添加唯一約束和檢查機制

技術改進：
- 遊戲循環期號同步檢查
- 數據庫唯一約束防重複
- 原子性操作和並發安全
- 錯誤恢復機制

文件修改：
- backend.js: 游戲循環和結算邏輯
- db/models/game.js: 期號檢查方法
- agent/frontend/*: 模態框修復
- frontend/*: 倒計時同步修復
- fix-duplicate-periods.sql: 數據庫約束

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -814,7 +814,7 @@
 
 
                     <!-- 新增會員 Modal -->
-                    <div class="modal" id="createMemberModal" tabindex="-1" v-if="showCreateMemberModal">
+                    <div class="modal" id="createMemberModal" tabindex="-1" v-show="showCreateMemberModal">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
