--- a/deploy/frontend/login.html
+++ b/deploy/frontend/login.html
@@ -19,22 +19,13 @@
     <script>
         // 登入檢查處理
         document.addEventListener('DOMContentLoaded', function() {
-            const isLoggedIn = sessionStorage.getItem('isLoggedIn');
-            if (!isLoggedIn) {
-                // 重定向到登入頁面
-                window.location.href = 'login.html';
-                return;
-            }
-            
-            // 檢查是否有必要的登入資訊
+            const isLoggedIn = sessionStorage.getItem('isLoggedIn') === 'true';
             const username = sessionStorage.getItem('username');
             const memberId = sessionStorage.getItem('memberId');
-            
-            if (!username || !memberId) {
-                // 登入資訊不完整，重新登入
-                sessionStorage.clear();
-                window.location.href = 'login.html';
-                return;
+
+            if (isLoggedIn && username && memberId) {
+                // 已登入，直接跳轉到首頁
+                window.location.href = 'index.html';
             }
         });
     </script>
