--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -26,7 +26,7 @@
             }
 
             const isLoggedIn = sessionStorage.getItem('isLoggedIn');
-            if (!isLoggedIn) {
+            if (!isLoggedIn || isLoggedIn !== 'true') {
                 // 重定向到登入頁面
                 window.location.href = 'login.html';
                 return;
@@ -34,32 +34,31 @@
             
             // 檢查是否有必要的登入資訊
             const username = sessionStorage.getItem('username');
-            const memberId = sessionStorage.getItem('memberId');
             
-            if (!username || !memberId) {
+            if (!username) {
                 // 登入資訊不完整，重新登入
                 sessionStorage.clear();
                 window.location.href = 'login.html';
                 return;
             }
 
-            // 驗證會話是否仍然有效
+            // 會話驗證改為非阻塞式，避免網路問題造成無限重定向
             try {
                 const response = await fetch('/api/member/check-session', {
                     method: 'GET',
                     credentials: 'include',
                     headers: {
-                        'Authorization': `Bearer ${sessionStorage.getItem('token')}`
+                        'Authorization': `Bearer ${sessionStorage.getItem('token') || ''}`
                     }
                 });
 
                 if (!response.ok) {
-                    throw new Error('Session expired');
+                    console.warn('Session validation failed, but continuing...');
+                    // 不立即清除登入狀態，讓用戶繼續使用
                 }
             } catch (error) {
-                console.error('Session validation failed:', error);
-                sessionStorage.clear();
-                window.location.href = 'login.html';
+                console.warn('Session validation error:', error);
+                // 網路錯誤時不清除登入狀態，讓用戶繼續使用
             }
         });
     </script>
@@ -5783,7 +5782,7 @@
                     document.querySelector(selector).style.display = 'none';
                 },
                 login() {
-                    fetch(`${this.API_BASE_URL}/api/login`, {
+                    fetch(`${this.API_BASE_URL}/api/member/login`, {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({
@@ -5795,10 +5794,11 @@
                     .then(data => {
                         if (data.success) {
                             sessionStorage.setItem('isLoggedIn', 'true');
-                            sessionStorage.setItem('username', data.user.username);
-                            sessionStorage.setItem('balance', data.user.balance);
-                            this.username = data.user.username;
-                            this.balance = data.user.balance;
+                            sessionStorage.setItem('username', data.member.username);
+                            sessionStorage.setItem('balance', data.member.balance);
+                            sessionStorage.setItem('memberId', data.member.id);
+                            this.username = data.member.username;
+                            this.balance = data.member.balance;
                             this.checkLoginStatus();
                             this.showNotification('登入成功！');
                         } else {
