--- a/deploy/frontend/login.html
+++ b/deploy/frontend/login.html
@@ -373,6 +373,9 @@
             }
         }
 
+        // API基礎URL配置
+        const API_BASE_URL = window.location.origin;
+        
         // 處理登入
         async function handleLogin(e) {
             e.preventDefault();
@@ -403,7 +406,7 @@
             
             try {
                 // 發送登入請求
-                const response = await fetch('/api/member/login', {
+                const response = await fetch(`${API_BASE_URL}/api/member/login`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
