--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -814,8 +814,9 @@
 
 
                     <!-- 新增會員 Modal -->
-                    <div class="modal" id="createMemberModal" tabindex="-1" v-if="showCreateMemberModal">
-                        <div class="modal-dialog">
+                    <div class="modal d-block" id="createMemberModal" tabindex="-1" v-if="showCreateMemberModal" 
+                         style="background-color: rgba(0,0,0,0.5); position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1055;">
+                        <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title">
