--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -1846,19 +1846,21 @@
         .controls-container {
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: 8px;
             justify-content: center;
+            flex-wrap: nowrap;
         }
 
         .countdown-section {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 5px;
-            padding: 8px 16px;
+            gap: 3px;
+            padding: 6px 10px;
             background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
+            border-radius: 12px;
             border: 2px solid rgba(255, 255, 255, 0.2);
+            min-width: 80px;
         }
 
         .countdown-section.betting {
@@ -1871,20 +1873,21 @@
             background: rgba(255, 193, 7, 0.1);
         }
         
-        /* 🎬 獨立開獎動畫按鈕樣式 */
+        /* 🎬 獨立開獎動畫按鈕樣式 - 縮小尺寸與期號一致 */
         .draw-animation-btn-standalone {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 25px;
-            font-size: 14px;
+            padding: 6px 12px;
+            border-radius: 12px;
+            font-size: 12px;
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
             border: 2px solid rgba(255, 255, 255, 0.2);
             white-space: nowrap;
+            min-width: 80px;
         }
         
         .draw-animation-btn-standalone:hover:not(:disabled) {
