--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -816,7 +816,7 @@
                     <!-- 新增會員 Modal -->
                     <div class="modal d-block" id="createMemberModal" tabindex="-1" v-if="showCreateMemberModal" 
                          style="background-color: rgba(0,0,0,0.8); position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999; display: flex; align-items: center; justify-content: center;">
-                        <div class="modal-dialog modal-dialog-centered" style="margin: 0; max-width: 500px; width: 90%;">
+                        <div class="modal-dialog modal-dialog-centered" style="margin: 0 auto !important; max-width: 500px; width: 90%; position: relative;">
                                                          <div class="modal-content" style="border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
                                  <div class="modal-header">
                                     <h5 class="modal-title">
