修復toggleAnimation函數Promise錯誤
- 修正updateGameData函數未返回Promise導致的TypeError
- 在updateGameData函數中添加return語句使其返回Promise
- 在catch塊中重新拋出錯誤以便調用者正確處理
- 同時修復frontend和deploy版本的相同問題
- 確保toggleAnimation中的.then()調用能正常工作

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -4607,7 +4607,7 @@
                 },
                 updateGameData() {
                     console.log('開始獲取遊戲數據...');
-                    fetch(`${this.API_BASE_URL}/api/game-data`)
+                    return fetch(`${this.API_BASE_URL}/api/game-data`)
                         .then(response => response.json())
                         .then(data => {
                             const serverCountdown = data.gameData.countdownSeconds;
@@ -4664,6 +4664,7 @@
                         })
                         .catch(error => {
                             console.error('獲取遊戲數據失敗:', error);
+                            throw error; // 重新拋出錯誤以便調用者處理
                         });
                 },
                 updateBalance() {
