修正動畫中的空格 - 清理「 開獎中...」→「開獎中...」

--- a/deploy/frontend/login.html
+++ b/deploy/frontend/login.html
@@ -252,7 +252,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <h1>🏁 極速賽車</h1>
+                            <h1>極速賽車</h1>
             <p>會員登入系統</p>
         </div>
 
@@ -299,7 +299,7 @@
                         <!-- 驗證碼將通過JavaScript生成 -->
                     </div>
                     <button type="button" class="refresh-btn" onclick="refreshCaptcha()" title="重新整理驗證碼">
-                        🔄
+                        載入中...
                     </button>
                 </div>
             </div>
