--- a/frontend/login.html
+++ b/frontend/login.html
@@ -252,7 +252,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <h1>🏁 極速賽車</h1>
+                            <h1>極速賽車</h1>
             <p>會員登入系統</p>
         </div>
 
